--- a/dg_jalbca_project.html
+++ b/dg_jalbca_project.html
@@ -92,14 +92,14 @@
 
 
 
+<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
 
 
 
 
-
-  <script type="text/javascript" src="JS/jquery-3.2.0.min.js"></script>
-  <script type="text/javascript" src="JS/main.js"></script>
+  
 
 </body>
 </html>
