--- a/dg_pwg.html
+++ b/dg_pwg.html
@@ -111,8 +111,8 @@
 
 
 
-  <script type="text/javascript" src="JS/jquery-3.2.0.min.js"></script>
-  <script type="text/javascript" src="JS/main.js"></script>
+<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
 </body>
 </html>
