--- a/dg_pwg.html
+++ b/dg_pwg.html
@@ -28,13 +28,13 @@
 
   <div class="container project-margin-top">
     <div class="row">
-      <div class="col-md-3 col-md-offset-2 ind-project-name">
+      <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 ind-project-name">
         <span>Client</span>
         <h3>Park West Gallery</h3>
         <span class="indi-type">Print</span>
       </div>
 
-      <div class="col-md-4 col-md-offset-1 ind-description-name">
+      <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 ind-description-name">
         <span>Description</span>
         <p class="ind-description">Nano Lopez Exhibition for Park West Gallery needed printed collateral that included a Catalog, Banner, and billboard. The design of these materials maintained the same visual language to ensure that they all belong to the same exhibition.</p>
       </div>      
