--- a/dg_pwg.html
+++ b/dg_pwg.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OrthoForge Branding / Illustrations</title>
+  <title>Park West Gallery</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Six+Caps" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800,900" rel="stylesheet">
+</head>
 <body>
 
   <a href="index.html">
