--- a/contact_me.html
+++ b/contact_me.html
@@ -20,10 +20,15 @@
   </div>
 </a>
 
+
+
 <div class="container form">
    
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-1" id="contact-area">   
+  <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-1" id="contact-area"> 
+    <div class="contact-header">
+      <h3>Contact Me</h3>
+    </div>  
     <div class="contact-area">
       
       <form method="post" action="https://formspree.io/dgarro7@gmail.com">
@@ -52,7 +57,7 @@
       <nav class="overlay-menu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="dg_resume_html">Resume</a></li>
+          <li><a href="images/dgarro_resume.pdf" target="_blank">Resume</a></li>
           <li><a href="contact_me.html">Contact</a></li>
         </ul>
       </nav>
