--- a/dg_hammerstrom.html
+++ b/dg_hammerstrom.html
@@ -109,7 +109,7 @@
       <nav class="overlay-menu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="dg_resume_html">Resume</a></li>
+          <li><a href="images/dgarro_resume.pdf" target="_blank">Resume</a></li>
           <li><a href="contact_me.html">Contact</a></li>
         </ul>
       </nav>
