--- a/ortho_forge.html
+++ b/ortho_forge.html
@@ -81,7 +81,7 @@
       </a> 
       <a href="dg_healthy_photographer.html">
         <div class="col-md-6 col-xs-6 previous-button">
-          <span>Healthy Photographer</span>
+          <span>HP</span>
           <img src="images/right_arrow.svg" class="arrow-right">
         </div>  
       </a> 
@@ -98,7 +98,7 @@
       <nav class="overlay-menu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="dg_resume_html">Resume</a></li>
+          <li><a href="images/dgarro_resume.pdf" target="_blank">Resume</a></li>
           <li><a href="contact_me.html">Contact</a></li>
         </ul>
       </nav>
