--- a/ortho_forge.html
+++ b/ortho_forge.html
@@ -32,13 +32,13 @@
 
   <div class="container project-margin-top">
     <div class="row">
-      <div class="col-md-3 col-md-offset-2 ind-project-name">
+      <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 ind-project-name">
         <span>Client</span>
         <h3>OrthoForge</h3>
         <span class="indi-type">Branding / Illustration</span>
       </div>
 
-      <div class="col-md-4 col-md-offset-1 ind-description-name">
+      <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 ind-description-name">
         <span>Description</span>
         <p class="ind-description">OrthoForge is a startup biotechnology company that focus on reinventing the way we handle the healing process of broken bones. The goal of Branding OrthoForge is to be approaching as well as it feeling like a biotechnology Brand. We also created vignette for the website to illustrate the history of bone settling.</p>
       </div>      
