--- a/dg_hydra.html
+++ b/dg_hydra.html
@@ -31,7 +31,7 @@
 
   <div class="container project-margin-top">
     <div class="row">
-      <div class="col-md-3 col-md-offset-2 ind-project-name">
+      <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 ind-project-name">
         <span>Client</span>
         <h3>Hydra</h3>
         <span class="indi-type">Branding / Web Design</span>
