--- a/dg_hammerstrom.html
+++ b/dg_hammerstrom.html
@@ -30,15 +30,16 @@
   </div>
   <!-- Hero header ends -->
 
-  <div class="container project-margin-top">
+
+    <div class="container project-margin-top">
     <div class="row">
-      <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 ind-project-name">
+      <div class="col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-1 ind-project-name">
         <span>Client</span>
         <h3>Hammerstrom</h3>
         <span class="indi-type">Branding</span>
       </div>
 
-      <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 ind-description-name">
+      <div class="col-md-4 col-md-offset-1 col-sm-5  ind-description-name">
         <span>Description</span>
         <p class="ind-description">Hammerstrom logo accomplished a marriage of both Luxury Fashion and construction. This logo successfully communicates to the target audience who are seeking a company that would be able to build their luxurious dream house. The mark of the logo could also be used as a seamless pattern for other brand collateral.</p>
       </div>      
