--- a/dg_healthy_photographer.html
+++ b/dg_healthy_photographer.html
@@ -29,17 +29,17 @@
   </div>
   <!-- Hero header ends -->
 
-   <div class="container project-margin-top">
+    <div class="container project-margin-top">
     <div class="row">
-      <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-1 ind-project-name">
+      <div class="col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-1 ind-project-name">
         <span>Client</span>
         <h3>Healthy Photographer</h3>
         <span class="indi-type">Branding</span>
       </div>
 
-       <div class="col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-3 ind-description-name">
+      <div class="col-md-4 col-md-offset-1 col-sm-5  ind-description-name">
         <span>Description</span>
-        <p class="ind-description">Nano Lopez Exhibition for Park West Gallery needed printed collateral that included a Catalog, Banner, and billboard. The design of these materials maintained the same visual language to ensure that they all belong to the same exhibition.</p>
+        <p class="ind-description">This brand mark aims to communicate the brand name in a playful but refined way. The icon combines a shutter and an orange to communicate the essence of the brand, healthy photographers.</p>
       </div>      
     </div>
   </div>
