--- a/dg_hydra.html
+++ b/dg_hydra.html
@@ -39,7 +39,7 @@
 
       <div class="col-md-4 col-md-offset-1 ind-description-name">
         <span>Description</span>
-        <p class="ind-description">This approach aims to illustrate more of the networking aspect to Hydra. The three lines in the enclosed hexagon represent the three fold mission of Hydra, while the hexagon suggests the continuous capability of Hydra’s networking. The rounded clean aesthetic for this approach offers more of approachable team oriented look and feel.</p>
+        <p class="ind-description">This approach aims to illustrate more of the networking aspect to Hydra. The three lines in the enclosed hexagon represent the three fold mission of Hydra, while the hexagon suggests the continuous capability of Hydra’s networking.</p>
       </div>      
     </div>
   </div>
