--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="big-number col-md-1 col-md-offset-1 flex-item">02</div>
           <div class="col-md-6 flex-item project-name">Hydra</br>
           <p class="project-type">Branding / Web Design</p></div>
-         <img class="plus-sign col-md-2 col-md-offset-3" src="images/plus_sign_new.svgz">
+         <img class="plus-sign col-md-2 col-md-offset-3" src="images/plus_sign.svg">
           
       </div>
     </a>
